[gd_scene load_steps=5 format=3 uid="uid://udhybfaq1xwa"]

[ext_resource type="Texture2D" uid="uid://gnbdubt8ncxq" path="res://Background/clouds.svg" id="1_60ygb"]
[ext_resource type="Script" path="res://Background/parallax_clouds.gd" id="1_jjkuk"]

[sub_resource type="Shader" id="Shader_64uhu"]
code = "/**
* Shadow 2D.
* License: CC0
* https://creativecommons.org/publicdomain/zero/1.0/
*/
shader_type canvas_item;
render_mode blend_mix;

uniform vec2 deform = vec2(2.0, 2.0);
uniform vec2 offset = vec2(0.0, 0.0);
uniform vec4 modulate : source_color;

//uniform vec2 texture_size; //uncomment for GLES2

void fragment() {
	vec2 ps = TEXTURE_PIXEL_SIZE;
	vec2 uv = UV;
	float sizex = float(textureSize(TEXTURE,int(ps.x)).x); //comment for GLES2
	float sizey = float(textureSize(TEXTURE,int(ps.y)).y); //comment for GLES2
	//float sizex = texture_size.x; //uncomment for GLES2
	//float sizey = texture_size.y; //uncomment for GLES2
	uv.y+=offset.y*ps.y;
	uv.x+=offset.x*ps.x;
	float decalx=((uv.y-ps.x*sizex)*deform.x);
	float decaly=((uv.y-ps.y*sizey)*deform.y);
	uv.x += decalx;
	uv.y += decaly;
	vec4 shadow = vec4(modulate.rgb, texture(TEXTURE, uv).a * modulate.a);
	vec4 col = texture(TEXTURE, UV);
	COLOR = mix(shadow, col, col.a);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_p6odd"]
shader = SubResource("Shader_64uhu")
shader_parameter/deform = Vector2(0, 0)
shader_parameter/offset = Vector2(-10, -5)
shader_parameter/modulate = Color(0, 0, 0, 0.392157)

[node name="Background" type="ParallaxBackground"]
script = ExtResource("1_jjkuk")
metadata/_edit_vertical_guides_ = [-1130.0]

[node name="DistantClouds" type="ParallaxLayer" parent="."]
z_index = 7
z_as_relative = false
position = Vector2(0, 17)
scale = Vector2(1.011, 1)
motion_scale = Vector2(0.1, 0.1)
motion_mirroring = Vector2(3000, 1640)

[node name="CanvasGroup" type="Node2D" parent="DistantClouds"]
modulate = Color(1, 1, 1, 0.215686)
position = Vector2(-613, -17.1925)

[node name="Sprite2D4" type="Sprite2D" parent="DistantClouds/CanvasGroup"]
position = Vector2(361.5, 143.738)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-29.2852, 431.356, 690.879, 245.227)

[node name="Sprite2D5" type="Sprite2D" parent="DistantClouds/CanvasGroup"]
position = Vector2(724, 195.005)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-29.2852, 431.356, 690.879, 245.227)

[node name="Sprite2D7" type="Sprite2D" parent="DistantClouds/CanvasGroup"]
position = Vector2(590, 1355.17)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-29.2852, 431.356, 690.879, 245.227)

[node name="Sprite2D2" type="Sprite2D" parent="DistantClouds/CanvasGroup"]
position = Vector2(40, 815.125)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-29.2852, 431.356, 690.879, 245.227)

[node name="Sprite2D3" type="Sprite2D" parent="DistantClouds/CanvasGroup"]
position = Vector2(643, 566.34)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-0.21991, 697.955, 827.855, 226.362)

[node name="Sprite2D6" type="Sprite2D" parent="DistantClouds/CanvasGroup"]
position = Vector2(269, 1212.57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_60ygb")
flip_h = true
region_enabled = true
region_rect = Rect2(-0.21991, 697.955, 827.855, 226.362)

[node name="CanvasGroup2" type="Node2D" parent="DistantClouds"]
modulate = Color(1, 1, 1, 0.215686)
position = Vector2(793, -17.1925)

[node name="Sprite2D4" type="Sprite2D" parent="DistantClouds/CanvasGroup2"]
position = Vector2(361.5, 143.738)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-29.2852, 431.356, 690.879, 245.227)

[node name="Sprite2D5" type="Sprite2D" parent="DistantClouds/CanvasGroup2"]
position = Vector2(724, 195.005)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-29.2852, 431.356, 690.879, 245.227)

[node name="Sprite2D7" type="Sprite2D" parent="DistantClouds/CanvasGroup2"]
position = Vector2(590, 1355.17)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-29.2852, 431.356, 690.879, 245.227)

[node name="Sprite2D2" type="Sprite2D" parent="DistantClouds/CanvasGroup2"]
position = Vector2(40, 815.125)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-29.2852, 431.356, 690.879, 245.227)

[node name="Sprite2D3" type="Sprite2D" parent="DistantClouds/CanvasGroup2"]
position = Vector2(643, 566.34)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-0.21991, 697.955, 827.855, 226.362)

[node name="Sprite2D6" type="Sprite2D" parent="DistantClouds/CanvasGroup2"]
position = Vector2(269, 1212.57)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_60ygb")
flip_h = true
region_enabled = true
region_rect = Rect2(-0.21991, 697.955, 827.855, 226.362)

[node name="Clouds" type="ParallaxLayer" parent="."]
z_index = 7
z_as_relative = false
motion_mirroring = Vector2(2400, 2105)

[node name="Cloud Grouped" type="Node2D" parent="Clouds"]
position = Vector2(-840, 0)

[node name="Sprite2D" type="Sprite2D" parent="Clouds/Cloud Grouped"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(47, 117)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(16.8304, -4.40363, 493.675, 212.66)

[node name="Sprite2D2" type="Sprite2D" parent="Clouds/Cloud Grouped"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(667, 593)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(284.974, 200.71, 505.068, 227.575)

[node name="Sprite2D3" type="Sprite2D" parent="Clouds/Cloud Grouped"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(261, 437)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(15.3513, 246.004, 269.622, 151.9)

[node name="Sprite2D4" type="Sprite2D" parent="Clouds/Cloud Grouped"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(83, 883)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-2.92715, 427.102, 625.879, 240.425)

[node name="Sprite2D5" type="Sprite2D" parent="Clouds/Cloud Grouped"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(418, 1213)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(20.1682, 686.525, 200.232, 127.734)

[node name="Sprite2D6" type="Sprite2D" parent="Clouds/Cloud Grouped"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(433, 1516)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(4.00757, 683.108, 789.88, 235.445)

[node name="Sprite2D7" type="Sprite2D" parent="Clouds/Cloud Grouped"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(659, 1834)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(3.05237, 914.33, 245.538, 183.18)

[node name="Cloud Grouped2" type="Node2D" parent="Clouds"]
position = Vector2(383, 0)

[node name="Sprite2D" type="Sprite2D" parent="Clouds/Cloud Grouped2"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(47, 117)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(16.8304, -4.40363, 493.675, 212.66)

[node name="Sprite2D2" type="Sprite2D" parent="Clouds/Cloud Grouped2"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(667, 593)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(284.974, 200.71, 505.068, 227.575)

[node name="Sprite2D3" type="Sprite2D" parent="Clouds/Cloud Grouped2"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(261, 437)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(15.3513, 246.004, 269.622, 151.9)

[node name="Sprite2D4" type="Sprite2D" parent="Clouds/Cloud Grouped2"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(83, 883)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(-2.92715, 427.102, 625.879, 240.425)

[node name="Sprite2D5" type="Sprite2D" parent="Clouds/Cloud Grouped2"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(418, 1213)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(20.1682, 686.525, 200.232, 127.734)

[node name="Sprite2D6" type="Sprite2D" parent="Clouds/Cloud Grouped2"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(433, 1516)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(4.00757, 683.108, 789.88, 235.445)

[node name="Sprite2D7" type="Sprite2D" parent="Clouds/Cloud Grouped2"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(659, 1834)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(3.05237, 914.33, 245.538, 183.18)

[node name="Sprite2D8" type="Sprite2D" parent="Clouds/Cloud Grouped2"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(609, 1037)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(393.57, 914.338, 326.585, 205.065)

[node name="Sprite2D9" type="Sprite2D" parent="Clouds/Cloud Grouped2"]
material = SubResource("ShaderMaterial_p6odd")
position = Vector2(-687, 1037)
texture = ExtResource("1_60ygb")
region_enabled = true
region_rect = Rect2(393.57, 914.338, 326.585, 205.065)

[node name="UICanvasModulate" type="CanvasModulate" parent="."]
color = Color(1, 1, 1, 0.313726)

[node name="NightCanvasModulate" type="CanvasModulate" parent="."]
visible = false
color = Color(0.560955, 0.560955, 0.560955, 1)
